Corrected the stats parsing/clensing

--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -23,7 +23,7 @@
             <td>{{this.played}}</td>
             <td>{{this.normalWin}}</td>
             <td>{{this.normalLoss}}</td>
-            <td>{{this.null}}</td>
+            <td>{{this.tie}}</td>
             <td>{{this.goalsFor}}</td>
             <td>{{this.goalsAgainst}}</td>
             <td>{{this.differencial}}</td>
