Added a real date to ease calendar import

--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -12,6 +12,7 @@
     <tbody>
         {{#each scheduleData}}
         <tr>
+            <td>{{this.realDate}}</td>
             <td>{{this.date}}</td>
             <td>{{this.beginTime}}</td>
             <td>{{this.eventTypeName}}</td>
