Fixes calendar template

--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,6 +1,7 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
+            <th>realDate</th>
             <th>Date</th>
             <th>Heure</th>
             <th>Type</th>
